Fix: Make global error message readable on black bg

--- a/Resources/Private/Less/VideoPlayer/VideoPlayerApp.less
+++ b/Resources/Private/Less/VideoPlayer/VideoPlayerApp.less
@@ -35,6 +35,7 @@
     text-align: left;
     padding-left: 1em;
     padding-top: 1em;
+    color: white;
 }
 
 // Chapter link in sidebar
